--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ version = '0.0.1-SNAPSHOT'
 java {
 	sourceCompatibility = '11'
 }
+apply plugin: 'java'
+
+compileJava {
+	options.compilerArgs += '-Xlint:deprecation'
+}
 
 repositories {
 	mavenCentral()
@@ -18,6 +23,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	runtimeOnly 'com.h2database:h2'
