--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
-spring.h2.console.enabled=true
 
-spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:h2:mem:homebanking
-
-spring.data.rest.base-path=/rest
+###Conexión para h2
+#spring.h2.console.enabled=true
+#
+#spring.h2.console.path=/h2-console
+#
+#spring.datasource.url=jdbc:h2:mem:homebanking
+#
+#spring.data.rest.base-path=/rest
+#
 
 spring.jackson.serialization.INDENT_OUTPUT=true
 
 logging.level.org.springframework.security=debug
+#conexion postgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/homebankingapp
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+
